--- a/src/Blog/641.rst
+++ b/src/Blog/641.rst
@@ -11,4 +11,4 @@ den grossen drachen aus eisen, bis hin zu sitzordnungen im bus und die
 mathematik dahinter. |image0| komischer tag, was fuer ein komischer
 tag... so long
 
-.. |image0| image:: http://nuit.homeunix.net/blag/wp-content/uploads/2011/11/lonely_man-300x289.jpg
+.. |image0| image:: http://images.hoeja.de/blog/lonely_man-300x289.jpg
