--- a/content/8a3e9655ada1f9746f89e38bc7bdf818.rst
+++ b/content/8a3e9655ada1f9746f89e38bc7bdf818.rst
@@ -72,3 +72,7 @@ Ich zeige euch nicht die Loesungsansaetze...ich glaube alle wuerden nur weinen.
 
 so long.
 
+
+Nachtrag:
+Das ganze hat noch einen Nachteil: Dadurch, dass der Cron alle 30min ausgefuehrt
+wird sind die Sessions bis zu 30min gueltig. YEAH...Perfektes Handling.
