--- a/content/8a8292241f0a78a877206adcd6fe60c9.rst
+++ b/content/8a8292241f0a78a877206adcd6fe60c9.rst
@@ -35,7 +35,7 @@ gehalten. Ein typischer Layer 7 DDoS auf POST.
     Content-Type: application/octet-stream
     Content-Length: 524
     User-Agent: Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; SV1)
-    Host: schiedel.it
+    Host: 
     Cache-Control: no-cache
     Connection: Keep-Alive
 
